--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseURL: 'https://example.com/' # Website URL
+title: isprs # Website name
+baseURL: 'https://tgis-lab.github.io' # Website URL
 
 ############################
 ## LANGUAGE
@@ -37,7 +37,7 @@ outputs:
   section: [HTML, RSS]
 imaging:
   resampleFilter: lanczos
-  quality: 75
+  quality: 100
   anchor: smart
 timeout: 600000
 taxonomies:
