--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,14 +43,7 @@ header:
 
 # Site footer
 
-footer:
-  copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+
 
 # Localization
 
@@ -75,19 +68,8 @@ features:
     branch: main
   avatar:
     gravatar: false
-    shape: circle
-  comment:
-    provider: ''
-    disqus:
-      shortname: ''
-      show_count: true
-    commento:
-      url: ''
-    giscus:
-      repo: ''
-      repo_id: ''
-      category: ''
-      category_id: ''
+    shape: square
+
   search:
     provider: wowchemy
     algolia:
@@ -114,3 +96,6 @@ extensions:
 security:
   # Allow frame for embedding speaker notes in slides
   allow_frame: true
+
+paginate: 6
+
