--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,23 +5,22 @@
 
 main:
   - name: Home
-    url: '#about'
+    url: '/'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
   - name: Projects
-    url: '#projects'
+    url: '/project'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
   - name: Publications
-    url: '#featured'
-    weight: 50
+    url: '/publications/'
+    weight: 20
+  - name: Team
+    url: '/Team/'
+    weight: 40
   - name: Contact
-    url: '#contact'
-    weight: 60
+    url: '/contact/'
+ 
+
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
