--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = public
 	url = git@github.com:tgis-lab/tgis-lab.github.io.git
 	branch = main
+[submodule "content/public"]
+	path = content/public
+	url = git@github.com:tgis-lab/tgis-lab.github.io.git
+	branch = main
